# cslr-exp-platform

./: .dockerignore  .env.example  .flake8  .gitattributes  .gitignore  .pyrightconfig.json  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE.txt  MERGE_PLAN.md  README.md  build-matrix.yaml  build_matrix.todo.md  config.example.yaml  nodes.yaml  pyproject.toml  test-cluster-readme.md  ws.py  ws_main.py
.config/zed/: settings.json
.github/: copilot-instructions.md
.github/workflows/: docker-build-matrix.yml  pr-checks.yaml
build-matrix/: 2603.yaml
docs/: BUILD_REPORT.md  architecture.md  build-matrix.md  config-reference.md  discussion-temp.md  head-node-detection-logic-candidates.md  issue-18-plan.md  ray-runtime-migration-plan.md  ray-startup-options.md  review-fixes-2026-02-10.md  test-cluster-readme.md  troubleshooting.md
docs/archives/: TORCH_GEOMETRIC_BUILD_OPTIMIZATION.md  build_matrix.todo.md
entrypoints/: health.py  health.sh  ray.sh
notes/: ray-runtime-migration-plan.md  test-cluster-readme.md
refactors-0319/: README.md  traefik-proxy.md
template/: .nfs0000000000395ecc00000040  cluster-test.compose.yaml.jinja2  cluster-test.compose.yaml.jinja2.bak  compose.yaml.jinja2  ray-ep.sh
templates/: cluster-test.compose.yaml.jinja2  compose.yaml.jinja2
tests/: test_build_matrix_monitor_disk.py  test_pip_requirements_install.py  test_ray_node_memory_validation.py
tools/: build-matrix.ps1  build-phase.bat  build_matrix.py  generate_config_schema.py  latest_versions.py  ws.py
ws_src/: __init__.py  commands.py  manager.py  models.py  schema_utils.py
(+5 files in other folders)
