[project]
name = "cslr-exp-platform"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "datamodel-code-generator[http]>=0.53.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0",
    "typer>=0.15.0",
    "pydantic>=2.10.0",
    "rich>=13.0.0",
    "pydantic-settings>=2.12.0",
    "requests>=2.32.5",
]

[tool.setuptools]
packages = ["ws_src"]

[project.scripts]
ws = "ws_src.commands:main"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "black>=26.1.0",
    "flake8>=7.3.0",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
]

[tool.flake8]
max-line-length = 88
extend-exclude = ".venv,_build"

[tool.pyright]
include = ["ws_src", "tools", "tests"]
exclude = [".venv", "_build", "__pycache__", "cslr_exp_platform.egg-info"]
